--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@autoxing/robot-js-sdk": "^1.0.2",
     "@autoxing/robot-js-sdk-dev": "^1.0.48",
     "@vitejs/plugin-legacy": "^2.0.1",
     "amfe-flexible": "^2.2.1",
