--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@autoxing/robot-js-sdk": "^1.0.3",
-    "@autoxing/robot-js-sdk-dev": "^1.0.57",
+    "@autoxing/robot-js-sdk": "^1.0.8",
+    "@autoxing/robot-js-sdk-dev": "^1.0.71",
     "@vitejs/plugin-legacy": "^2.0.1",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
@@ -18,6 +18,7 @@
     "postcss-px2rem": "^0.3.0",
     "swiper": "^8.3.2",
     "vue": "^3.2.38",
+    "vue-i18n": "^9.3.0-beta.3",
     "vue-router": "^4.1.5",
     "vue-slider-component": "^4.1.0-beta.2",
     "vue3-loading-overlay": "^0.0.0",
